--- a/pasos/Paso6/scripts/pyspark-ETL.ipynb
+++ b/pasos/Paso6/scripts/pyspark-ETL.ipynb
@@ -38,18 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/10/16 11:53:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "spark = SparkSession.builder.appName(\"pyspark-notebook\").master(\"spark://spark-master:7077\").getOrCreate()\n"
+    "spark = SparkSession.builder.appName(\"PysparkExample\").config (\"spark.sql.shuffle.partitions\", \"50\").config(\"spark.driver.maxResultSize\",\"5g\").config (\"spark.sql.execution.arrow.enabled\", \"true\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,141 +77,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'spark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m venta \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39mread\u001b[39m.\u001b[39moption(\u001b[39m\"\u001b[39m\u001b[39mcompression.codec\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39msnappy\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39moption(\u001b[39m\"\u001b[39m\u001b[39mmergeSchema\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mtrue\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mparquet(\u001b[39m\"\u001b[39m\u001b[39mdata2/venta\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/10/15 17:12:04 WARN StandaloneAppClient$ClientEndpoint: Failed to connect to master spark-master:7077\n",
-      "org.apache.spark.SparkException: Exception thrown in awaitResult: \n",
-      "\tat org.apache.spark.util.SparkThreadUtils$.awaitResult(SparkThreadUtils.scala:56)\n",
-      "\tat org.apache.spark.util.ThreadUtils$.awaitResult(ThreadUtils.scala:310)\n",
-      "\tat org.apache.spark.rpc.RpcTimeout.awaitResult(RpcTimeout.scala:75)\n",
-      "\tat org.apache.spark.rpc.RpcEnv.setupEndpointRefByURI(RpcEnv.scala:102)\n",
-      "\tat org.apache.spark.rpc.RpcEnv.setupEndpointRef(RpcEnv.scala:110)\n",
-      "\tat org.apache.spark.deploy.client.StandaloneAppClient$ClientEndpoint$$anon$1.run(StandaloneAppClient.scala:108)\n",
-      "\tat java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)\n",
-      "\tat java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:829)\n",
-      "Caused by: java.io.IOException: Failed to connect to spark-master:7077\n",
-      "\tat org.apache.spark.network.client.TransportClientFactory.createClient(TransportClientFactory.java:294)\n",
-      "\tat org.apache.spark.network.client.TransportClientFactory.createClient(TransportClientFactory.java:214)\n",
-      "\tat org.apache.spark.network.client.TransportClientFactory.createClient(TransportClientFactory.java:226)\n",
-      "\tat org.apache.spark.rpc.netty.NettyRpcEnv.createClient(NettyRpcEnv.scala:204)\n",
-      "\tat org.apache.spark.rpc.netty.Outbox$$anon$1.call(Outbox.scala:202)\n",
-      "\tat org.apache.spark.rpc.netty.Outbox$$anon$1.call(Outbox.scala:198)\n",
-      "\t... 4 more\n",
-      "Caused by: java.net.UnknownHostException: spark-master\n",
-      "\tat java.base/java.net.InetAddress$CachedAddresses.get(InetAddress.java:797)\n",
-      "\tat java.base/java.net.InetAddress.getAllByName0(InetAddress.java:1533)\n",
-      "\tat java.base/java.net.InetAddress.getAllByName(InetAddress.java:1386)\n",
-      "\tat java.base/java.net.InetAddress.getAllByName(InetAddress.java:1307)\n",
-      "\tat java.base/java.net.InetAddress.getByName(InetAddress.java:1257)\n",
-      "\tat io.netty.util.internal.SocketUtils$8.run(SocketUtils.java:156)\n",
-      "\tat io.netty.util.internal.SocketUtils$8.run(SocketUtils.java:153)\n",
-      "\tat java.base/java.security.AccessController.doPrivileged(Native Method)\n",
-      "\tat io.netty.util.internal.SocketUtils.addressByName(SocketUtils.java:153)\n",
-      "\tat io.netty.resolver.DefaultNameResolver.doResolve(DefaultNameResolver.java:41)\n",
-      "\tat io.netty.resolver.SimpleNameResolver.resolve(SimpleNameResolver.java:61)\n",
-      "\tat io.netty.resolver.SimpleNameResolver.resolve(SimpleNameResolver.java:53)\n",
-      "\tat io.netty.resolver.InetSocketAddressResolver.doResolve(InetSocketAddressResolver.java:55)\n",
-      "\tat io.netty.resolver.InetSocketAddressResolver.doResolve(InetSocketAddressResolver.java:31)\n",
-      "\tat io.netty.resolver.AbstractAddressResolver.resolve(AbstractAddressResolver.java:106)\n",
-      "\tat io.netty.bootstrap.Bootstrap.doResolveAndConnect0(Bootstrap.java:220)\n",
-      "\tat io.netty.bootstrap.Bootstrap.access$000(Bootstrap.java:46)\n",
-      "\tat io.netty.bootstrap.Bootstrap$1.operationComplete(Bootstrap.java:189)\n",
-      "\tat io.netty.bootstrap.Bootstrap$1.operationComplete(Bootstrap.java:175)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.notifyListener0(DefaultPromise.java:590)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.notifyListenersNow(DefaultPromise.java:557)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.notifyListeners(DefaultPromise.java:492)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.setValue0(DefaultPromise.java:636)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.setSuccess0(DefaultPromise.java:625)\n",
-      "\tat io.netty.util.concurrent.DefaultPromise.trySuccess(DefaultPromise.java:105)\n",
-      "\tat io.netty.channel.DefaultChannelPromise.trySuccess(DefaultChannelPromise.java:84)\n",
-      "\tat io.netty.channel.AbstractChannel$AbstractUnsafe.safeSetSuccess(AbstractChannel.java:990)\n",
-      "\tat io.netty.channel.AbstractChannel$AbstractUnsafe.register0(AbstractChannel.java:516)\n",
-      "\tat io.netty.channel.AbstractChannel$AbstractUnsafe.access$200(AbstractChannel.java:429)\n",
-      "\tat io.netty.channel.AbstractChannel$AbstractUnsafe$1.run(AbstractChannel.java:486)\n",
-      "\tat io.netty.util.concurrent.AbstractEventExecutor.runTask(AbstractEventExecutor.java:174)\n",
-      "\tat io.netty.util.concurrent.AbstractEventExecutor.safeExecute(AbstractEventExecutor.java:167)\n",
-      "\tat io.netty.util.concurrent.SingleThreadEventExecutor.runAllTasks(SingleThreadEventExecutor.java:470)\n",
-      "\tat io.netty.channel.nio.NioEventLoop.run(NioEventLoop.java:569)\n",
-      "\tat io.netty.util.concurrent.SingleThreadEventExecutor$4.run(SingleThreadEventExecutor.java:997)\n",
-      "\tat io.netty.util.internal.ThreadExecutorMap$2.run(ThreadExecutorMap.java:74)\n",
-      "\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\n",
-      "\t... 1 more\n",
-      "23/10/15 17:12:24 WARN StandaloneSchedulerBackend: Application ID is not initialized yet.\n",
-      "23/10/15 17:12:24 ERROR StandaloneSchedulerBackend: Application has been killed. Reason: All masters are unresponsive! Giving up.\n",
-      "23/10/15 17:12:24 WARN StandaloneAppClient$ClientEndpoint: Drop UnregisterApplication(null) because has not yet connected to master\n",
-      "23/10/15 17:12:29 ERROR AsyncEventQueue: Listener AppStatusListener threw an exception\n",
-      "java.lang.NullPointerException\n",
-      "\tat org.apache.spark.status.AppStatusListener.onApplicationEnd(AppStatusListener.scala:193)\n",
-      "\tat org.apache.spark.scheduler.SparkListenerBus.doPostEvent(SparkListenerBus.scala:57)\n",
-      "\tat org.apache.spark.scheduler.SparkListenerBus.doPostEvent$(SparkListenerBus.scala:28)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue.doPostEvent(AsyncEventQueue.scala:37)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue.doPostEvent(AsyncEventQueue.scala:37)\n",
-      "\tat org.apache.spark.util.ListenerBus.postToAll(ListenerBus.scala:117)\n",
-      "\tat org.apache.spark.util.ListenerBus.postToAll$(ListenerBus.scala:101)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue.super$postToAll(AsyncEventQueue.scala:105)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue.$anonfun$dispatch$1(AsyncEventQueue.scala:105)\n",
-      "\tat scala.runtime.java8.JFunction0$mcJ$sp.apply(JFunction0$mcJ$sp.java:23)\n",
-      "\tat scala.util.DynamicVariable.withValue(DynamicVariable.scala:62)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue.org$apache$spark$scheduler$AsyncEventQueue$$dispatch(AsyncEventQueue.scala:100)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue$$anon$2.$anonfun$run$1(AsyncEventQueue.scala:96)\n",
-      "\tat org.apache.spark.util.Utils$.tryOrStopSparkContext(Utils.scala:1356)\n",
-      "\tat org.apache.spark.scheduler.AsyncEventQueue$$anon$2.run(AsyncEventQueue.scala:96)\n",
-      "23/10/15 17:12:30 ERROR SparkContext: Error initializing SparkContext.\n",
-      "java.lang.IllegalArgumentException: requirement failed: Can only call getServletHandlers on a running MetricsSystem\n",
-      "\tat scala.Predef$.require(Predef.scala:281)\n",
-      "\tat org.apache.spark.metrics.MetricsSystem.getServletHandlers(MetricsSystem.scala:89)\n",
-      "\tat org.apache.spark.SparkContext.<init>(SparkContext.scala:676)\n",
-      "\tat org.apache.spark.api.java.JavaSparkContext.<init>(JavaSparkContext.scala:58)\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:490)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:247)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:238)\n",
-      "\tat py4j.commands.ConstructorCommand.invokeConstructor(ConstructorCommand.java:80)\n",
-      "\tat py4j.commands.ConstructorCommand.execute(ConstructorCommand.java:69)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:829)\n"
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "venta = spark.read.option(\"compression.codec\", \"snappy\").option(\"mergeSchema\", \"true\").parquet(\"data2/venta\")"
+    "venta = spark.read.option(\"compression.codec\", \"snappy\").option(\"mergeSchema\", \"true\").parquet(\"/home/pc/Documentos/henry/hadoopProyecto/Datasets2/venta/000000_0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "46645"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +130,7 @@
        "10"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import mean, stddev  \n",
+    "from pyspark.sql.functions import col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -322,15 +241,15 @@
       "|idproducto|          promedio|            stddev|      PrecioMaximo|       PrecioMinimo|\n",
       "+----------+------------------+------------------+------------------+-------------------+\n",
       "|     42834|1772.5477912454044| 8766.698479843624|28072.643230776277| -24527.54764828547|\n",
+      "|     42991|1656.0337078651685|7184.8999426086675| 23210.73353569117|-19898.666119960835|\n",
+      "|     42861|2431.3661971830984| 9924.897685292788|32206.059253061463|-27343.326858695265|\n",
+      "|     43040|             757.0|               0.0|             757.0|              757.0|\n",
       "|     43010| 579.5276381909548|2715.9365607484365| 8727.337320436265| -7568.282044054355|\n",
-      "|     42926| 173.2289156626506| 855.8609108933418| 2740.811648342676|-2394.3538170173747|\n",
-      "|     42754| 3399.485294117647|16178.246644473787|51934.225227539006| -45135.25463930372|\n",
-      "|     42942| 9817.857142857143| 43428.96544353547|140104.75347346353|-120469.03918774925|\n",
-      "|     42817|2294.6944737346626|10853.233513624373|34854.395014607784|-30265.006067138456|\n",
-      "|     43007| 883.8402366863905|  4370.23553541889| 13994.54684294306| -12226.86636957028|\n",
-      "|     42988|2085.4874371859296| 9288.874866279935|29952.112036025737|-25781.137161653878|\n",
-      "|     42780| 8983.607186832784| 44315.73955637865|141930.82585596872|-123963.61148230315|\n",
-      "|     42783| 5468.261329034841|  26974.6927750322| 86392.33965413144| -75455.81699606177|\n",
+      "|     43022|             675.2| 3252.412888918011|10432.438666754035| -9082.038666754033|\n",
+      "|     43026|1884.0645161290322| 8346.479364859078|26923.502610706266|-23155.373578448205|\n",
+      "|     42822|2014.9213189019097| 9806.281581842579|31433.766064429645|-27403.923426625825|\n",
+      "|     43011| 624.9689440993789|3019.4873994238646| 9683.431142370973| -8433.493254172216|\n",
+      "|     42979|240.85142857142858|1192.4990424756822| 3818.348555998475| -3336.645698855618|\n",
       "+----------+------------------+------------------+------------------+-------------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -343,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,18 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[idventa: int, fecha: date, fecha_entrega: date, idcanal: int, idcliente: int, idsucursal: int, idempleado: int, idproducto: int, precio: float, cantidad: int, promedio: double, stddev: double, PrecioMaximo: float, PrecioMinimo: double]"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'col' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m venta\u001b[39m.\u001b[39mwithColumn(\u001b[39m\"\u001b[39m\u001b[39mPrecioMaximo\u001b[39m\u001b[39m\"\u001b[39m,col(\u001b[39m\"\u001b[39m\u001b[39mPrecioMaximo\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mcast(\u001b[39m\"\u001b[39m\u001b[39mfloat\u001b[39m\u001b[39m\"\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'col' is not defined"
+     ]
     }
    ],
    "source": [
