--- a/pasos/Paso6/scripts/pyspark-ETL.ipynb
+++ b/pasos/Paso6/scripts/pyspark-ETL.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -262,24 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ventas_out.write.option(\"compression.codec\", \"snappy\").option(\"mergeSchema\", \"true\").parquet(\"data2/venta_criterio_outliers\", mode=\"overwrite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -320,19 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'col' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m venta\u001b[39m.\u001b[39mwithColumn(\u001b[39m\"\u001b[39m\u001b[39mPrecioMaximo\u001b[39m\u001b[39m\"\u001b[39m,col(\u001b[39m\"\u001b[39m\u001b[39mPrecioMaximo\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mcast(\u001b[39m\"\u001b[39m\u001b[39mfloat\u001b[39m\u001b[39m\"\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'col' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "DataFrame[idventa: int, fecha: date, fecha_entrega: date, idcanal: int, idcliente: int, idsucursal: int, idempleado: int, idproducto: int, precio: float, cantidad: int, promedio: double, stddev: double, PrecioMaximo: float, PrecioMinimo: double]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -341,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +341,7 @@
        "DataFrame[idventa: int, fecha: date, fecha_entrega: date, idcanal: int, idcliente: int, idsucursal: int, idempleado: int, idproducto: int, precio: float, cantidad: int, promedio: double, stddev: double, PrecioMaximo: double, PrecioMinimo: float]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import BooleanType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,23 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "44845"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 32:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -483,6 +477,13 @@
       "only showing top 10 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
