finalizacion del proyecto

--- a/pasos/Paso6/scripts/pyspark-ETL.ipynb
+++ b/pasos/Paso6/scripts/pyspark-ETL.ipynb
@@ -77,14 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pc/Documentos/henry/hadoopProyecto/pasos/Paso6/scripts/pyspark-ETL.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m venta \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39mread\u001b[39m.\u001b[39moption(\u001b[39m\"\u001b[39m\u001b[39mcompression.codec\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39msnappy\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39moption(\u001b[39m\"\u001b[39m\u001b[39mmergeSchema\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mtrue\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mparquet(\u001b[39m\"\u001b[39m\u001b[39mDatasets2/venta/000000_0\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
      ]
     }
    ],
